--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,7 +2,10 @@
   position: sticky;
   top: 0;
 
-  padding: 1rem;
+  display: flex;
+  align-items: center;
+
+  height: 3.125rem;
 
   color: var(--color-text);
   background-color: #f8f8f8;
