--- a/src/Containers/Chat/Chat.css
+++ b/src/Containers/Chat/Chat.css
@@ -1,12 +1,6 @@
-.chat-wrapper {
-  height: 100vh;
-  max-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
 .chat-container {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
+
+  height: calc(100vh - 3.125rem);
 }
