Пользователям устанавливаются случайные цвета

--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -1,44 +1,20 @@
 .message {
-  align-self: flex-start;
-
   min-width: 250px;
   max-width: 80%;
   margin: .3125rem 0;
   padding: .625rem;
 
-  color: var(--color-text-inverse);
+  color: var(--color-text);
   border-radius: var(--border-radius);
-  background-color: var(--color-primary-alt);
+  background-color: currentColor;
 }
 
 .message__text {
   line-height: 1.5;
 
+  color: white;
+
   overflow-wrap: break-word;
-}
-
-.message--owner {
-  align-self: flex-end;
-
-  background-color: var(--color-primary);
-}
-
-.message--notify {
-  font-size: var(--font-text);
-  line-height: 1;
-
-  align-self: center;
-
-  padding: 0;
-
-  text-align: center;
-
-  color: currentColor;
-  background-color: transparent;
-}
-
-.message--owner.message--notify {
-  color: var(--color-primary);
 }
 
 .message__info {
@@ -48,8 +24,25 @@
   justify-content: space-between;
 
   margin-bottom: .5rem;
+
+  color: white;
 }
 
 .message__userinfo {
   margin-right: 1rem;
+}
+
+.notify {
+  font-size: var(--font-text);
+  line-height: 1.25;
+
+  align-self: center;
+
+  max-width: 80%;
+  padding: 0;
+
+  text-align: center;
+
+  color: currentColor;
+  background-color: transparent;
 }
