--- a/src/Containers/MessageList/MessageList.css
+++ b/src/Containers/MessageList/MessageList.css
@@ -19,26 +19,14 @@
   flex-direction: column;
 }
 
-.from-right-enter {
-  transform: translateX(100%);
+.appear-enter {
+  transform: scale(.3) perspective(300px) rotateX(30deg);
 
   opacity: 0;
 }
-.from-right-enter-active {
-  transition: transform 200ms ease-out, opacity 50ms ease-out 100ms;
-  transform: translateX(0);
-
-  opacity: 1;
-}
-
-.from-left-enter {
-  transform: translateX(-100%);
-
-  opacity: 0;
-}
-.from-left-enter-active {
-  transition: transform 200ms ease-out, opacity 50ms ease-out 100ms;
-  transform: translateX(0);
+.appear-enter-active {
+  transition: all 300ms ease-out;
+  transform: scale(1) perspective(300px) rotateY(0deg);
 
   opacity: 1;
 }
