--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ body {
 .btn:focus {
   border-color: var(--color-primary);
   outline: none;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
 }
 
 .btn--primary {
